# purrtty

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/purrtty-app/: Cargo.toml
crates/purrtty-app/src/: agent.rs  macos.rs  main.rs  selection.rs
crates/purrtty-app/tests/: smoke.rs
crates/purrtty-pty/: Cargo.toml
crates/purrtty-pty/src/: lib.rs
crates/purrtty-term/src/: cell.rs  grid.rs  lib.rs  parser.rs
crates/purrtty-ui/: Cargo.toml
crates/purrtty-ui/src/: glyph_cache.rs  lib.rs  quad.rs  renderer.rs  theme.rs
crates/purtty-app/: Cargo.toml
crates/purtty-app/src/: main.rs
crates/purtty-pty/: Cargo.toml
crates/purtty-pty/src/: lib.rs
crates/purtty-term/: Cargo.toml
crates/purtty-term/src/: lib.rs
crates/purtty-ui/: Cargo.toml
crates/purtty-ui/src/: lib.rs  renderer.rs
docs/: block-mode.md  plan.md  telegram.md
